--- a/Balance/Balance/Views/Home/Index.cshtml
+++ b/Balance/Balance/Views/Home/Index.cshtml
@@ -1,20 +1,9 @@
-﻿@{
+﻿@model Balance.ViewModels.IndexViewModel
+@{
     ViewBag.Title = "Balance";
 }
 
-@{
-    var totalMessage = "";
-    if (IsPost)
-    {
-        var text = Request["text"];
-        var total = "";
-        for (int t = text.Length-1; t >= 0; t--)
-        {
-            total += text.ElementAt(t);
-        }
-        totalMessage = "" + total;
-    }
-}
+
 <!DOCTYPE html>
 <html>
 <body style="background-color: beige; font-family: Verdana, Arial;">
@@ -25,7 +14,7 @@
         </p>
         <p><input type="submit" value=" Reverse "></p>
     </form>
-    <p>@totalMessage</p>
+    <p>@Model.text</p>
 </body>
 </html>
 
