--- a/Balance/Balance/Views/Home/Index.cshtml
+++ b/Balance/Balance/Views/Home/Index.cshtml
@@ -2,7 +2,9 @@
 @{
     ViewBag.Title = "Balance";
 }
-<button onclick="window.location.href='/AddGroup'">Add Group</button>
+<p>
+    @Html.ActionLink("Add Group", "AddGroup")
+</p>
 
 @for (var i = Model.Groups.Count()-1; i >= 0; i--)
 {
