--- a/Balance/Balance/Views/Home/Index.cshtml
+++ b/Balance/Balance/Views/Home/Index.cshtml
@@ -6,8 +6,6 @@
     @Html.ActionLink("Add Group", "AddGroup")
 </p>
 
-@for (var i = Model.Groups.Count()-1; i >= 0; i--)
-{
-    <p>@Html.ActionLink(Model.Groups.ElementAt(i).Value, "Group" , new { Id = i })</p>
+@foreach(var group in Model.Groups){
+<p>@Html.ActionLink(group.Value, "Group", new { Id = group.Key })</p>
 }
-
