--- a/Balance/Balance/Views/Home/Group.cshtml
+++ b/Balance/Balance/Views/Home/Group.cshtml
@@ -6,10 +6,8 @@
 </p>
 <p><label>@Model.Description</label>
 </p>
-<p><label>@Model.Sum</label>
-</p>
 <p>
-    @Html.ActionLink("Add Payment", "Payment", new {Id = @Model.Id})
+    @Html.ActionLink("Add Payment", "Payment", new {Id = @Model.Id.ToString()})
 </p>
 
 
