--- a/Balance/Balance/Views/Home/Payment.cshtml
+++ b/Balance/Balance/Views/Home/Payment.cshtml
@@ -13,12 +13,16 @@
         <input type="text" name="email">
     </p>
     <p>
+        <label>UserId</label>
+        <input type="text" name="userId">
+    </p>
+    <p>
            <input type="submit" value="Add"/>
     </p>
 </form>
 
 <p>
-    @Html.ActionLink("Add", "Index")
+    @Html.ActionLink("Ok", "Index")
 </p>
 
 
