--- a/Balance/Balance/Views/Shared/_LoginPartial.cshtml
+++ b/Balance/Balance/Views/Shared/_LoginPartial.cshtml
@@ -5,7 +5,7 @@
 
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <span>Hello @User.Identity.GetUserName()!</span>
+                <a>Hello @User.Identity.GetUserName()!</a>
             </li>
             <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
         </ul>
