--- a/Balance/Balance/Views/Home/AddGroup.cshtml
+++ b/Balance/Balance/Views/Home/AddGroup.cshtml
@@ -18,6 +18,7 @@
         <label>Email</label>
         <input type="text" name="email">
     </p>
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <p>
         <input type="submit" value="Add"/>
     </p>
