--- a/Balance/Balance/Views/Home/Group.cshtml
+++ b/Balance/Balance/Views/Home/Group.cshtml
@@ -2,20 +2,36 @@
 @{
     ViewBag.Title = "Group";
 }
-<p><label>@Model.Name</label>
+<p><label>Name @Model.Name</label>
 </p>
-<p><label>@Model.Description</label>
+<p><label>Description @Model.Description</label>
 </p>
 <p>
     @Html.ActionLink("Add Payment", "Payment", new {Id = @Model.Id.ToString()})
 </p>
 <p>
-    <label>@Model.Sum</label>
+    <label>Sum @Model.Sum</label>
 </p>
 
+<p>
+    @Html.ActionLink("Add User To Group", "AddUserToGroup", new { Id = Model.Id.ToString() });
+</p>
+<p>
+    <label>Payments</label>
+</p>
 @foreach (var payment in Model.Payments)
 {
-    <p><label>@payment.Value</label></p>
+    <label>@payment.Value  -   @payment.UserName</label><br>
 }
 
+<p>
+    <label>Users</label>
+</p>
+@foreach (var user in Model.Users)
+{
+    <label>@user.Name</label><br>
+}
 
+<p>
+    @Html.ActionLink("Home", "Index")
+</p>
