--- a/Balance/Balance/Views/Home/Group.cshtml
+++ b/Balance/Balance/Views/Home/Group.cshtml
@@ -2,15 +2,15 @@
 @{
     ViewBag.Title = "Group";
 }
-<p><label>Name @Model.Name</label>
-</p>
-<p><label>Description @Model.Description</label>
+
+<p>
+    <label>Name @Model.Name</label>
 </p>
 <p>
-    @Html.ActionLink("Add Payment", "Payment", new {Id = @Model.Id.ToString()})
+    <label>Description @Model.Description</label>
 </p>
 <p>
-    <label>Sum @Model.Sum</label>
+    @Html.ActionLink("Add Payment", "Payment", new { Id = @Model.Id.ToString() })
 </p>
 
 <p>
@@ -19,19 +19,22 @@
 <p>
     <label>Payments</label>
 </p>
-@foreach (var payment in Model.Payments)
-{
-    <label>@payment.Value  -   @payment.UserName</label><br>
-}
+<table border="1" style="border-collapse: collapse">
+    <tr><th>User name</th><th>Payment value</th></tr>
+    <tr><td><b>Total</b></td> <td>@Model.Sum</td></tr>
+    @foreach (var payment in Model.Payments)
+    {
+        <tr><td>@payment.UserName</td><td>@payment.Value</td></tr>
 
+    }
+</table>
 <p>
     <label>Users</label>
 </p>
-@foreach (var user in Model.Users)
-{
-    <label>@user.Name</label><br>
-}
-
-<p>
-    @Html.ActionLink("Home", "Index")
-</p>
+<table border="1" style="border-collapse: collapse">
+    <tr><th>User name</th></tr>
+    @foreach (var user in Model.Users)
+    {
+        <tr><td>@user.Name</td></tr>
+    }
+</table>
