--- a/Balance/Balance/Views/Home/Group.cshtml
+++ b/Balance/Balance/Views/Home/Group.cshtml
@@ -14,10 +14,10 @@
 </p>
 
 <p>
-    @Html.ActionLink("Add User To Group", "AddUserToGroup", new {Id = Model.Id.ToString()});
+    @Html.ActionLink("Add User To Group", "AddUserToGroup", new {Id = Model.Id.ToString()})
 </p>
 <p>
-    @Html.ActionLink("Count", "Count", new { Id = Model.Id.ToString() });
+    @Html.ActionLink("Count", "Count", new { Id = Model.Id.ToString() })
 </p>
 <p>
     <label>Payments</label>
