--- a/Balance/Balance/Views/Home/AddGroup.cshtml
+++ b/Balance/Balance/Views/Home/AddGroup.cshtml
@@ -5,18 +5,22 @@
 
 <form action="" method="post">
     <p>
-        <label>Name</label>
-        <input type="text" name="name">
+        <div class="form-group">
+            <h3><label class="label label-default">Name: </label></h3>
+            <input type="text" class="form-control" name="name" placeholder="Enter Name">
+        </div>
     </p>
 
     <p>
-        <label>Description</label>
-        <input type="text" name="description">
-    </p>
+        <div class="form-group">
+            <h3><label class="label label-default">Description: </label></h3>
+            <input type="text" class="form-control" name="description" placeholder="Enter Description">
+            </div>
+</p>
 
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <p>
-        <input type="submit" value="Add"/>
+        <input type="submit" class="btn btn-success" value="Add"/>
     </p>
 </form>
 
