--- a/Balance/Balance/Views/Home/AddUserToGroup.cshtml
+++ b/Balance/Balance/Views/Home/AddUserToGroup.cshtml
@@ -3,12 +3,14 @@
     ViewBag.Title = "AddUserToGroup";
 }
 <form action="" method="post">
-    <p>
-        <label>Email</label>
-        <input type="text" name="email">
+
+        <div class="form-group">
+            <h3><label class="label label-default">Email: </label></h3>
+            <input type="text" class="form-control" name="email" placeholder="Enter email of user you want to add">
+        </div>
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    </p>
-    <p>
-        <input type="submit" value="Add" />
-    </p>
+
+
+        <input type="submit" class="btn btn-success" value="Add" />
+
 </form>
