--- a/Balance/Balance/Views/Home/Payment.cshtml
+++ b/Balance/Balance/Views/Home/Payment.cshtml
@@ -4,12 +4,12 @@
 }
 <form action="" method="post">
     <p>
-        <label>Value</label>
-        <input type="number" name="value">
+        <h3><label class="label label-default">Value: </label></h3>
+        <input type="number" name="value" class="form-control"  placeholder="Enter value">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     </p>
     <p>
-           <input type="submit" value="Add"/>
+           <input type="submit" class="btn btn-success" value="Add"/>
     </p>
 </form>
 
