--- a/Balance/Balance/Views/Home/Group.cshtml
+++ b/Balance/Balance/Views/Home/Group.cshtml
@@ -1,28 +1,34 @@
-﻿@model Balance.ViewModels.GroupViewModel
+﻿
+
+@model Balance.ViewModels.GroupViewModel
 @{
     ViewBag.Title = "Group";
 }
 
 <p>
-    <label>Name @Model.Name</label>
+    <h3><label class="label label-default">Name:</label> &nbsp<label class="label label-info">@Model.Name</label></h3>
 </p>
 <p>
-    <label>Description @Model.Description</label>
+    <h3><label class="label label-default">Description:</label> &nbsp<label class="label label-info">@Model.Description</label></h3>
 </p>
+<br />
 <p>
-    @Html.ActionLink("Add Payment", "Payment", new { Id = @Model.Id.ToString() })
+    <h4><label class="label label-warning">@Html.ActionLink("Add Payment", "Payment", new { Id = @Model.Id.ToString() })</label></h4>
 </p>
 
 <p>
-    @Html.ActionLink("Add User To Group", "AddUserToGroup", new {Id = Model.Id.ToString()})
+    <h4><label class="label label-warning">@Html.ActionLink("Add User To Group", "AddUserToGroup", new {Id = Model.Id.ToString()})</label></h4>
 </p>
+
 <p>
-    @Html.ActionLink("Count", "Count", new { Id = Model.Id.ToString() })
+    <h4><label class="label label-warning">@Html.ActionLink("Count", "Count", new { Id = Model.Id.ToString() })</label></h4>
 </p>
+
+<br />
 <p>
-    <label>Payments</label>
+    <h3><label class="label label-primary">Payments</label></h3>
 </p>
-<table border="1" style="border-collapse: collapse">
+<table class="table table-bordered">
     <tr><th>User name</th><th>Payment value</th></tr>
     <tr><td><b>Total</b></td> <td>@Model.Sum</td></tr>
     @foreach (var payment in Model.Payments)
@@ -32,9 +38,9 @@
     }
 </table>
 <p>
-    <label>Users</label>
+    <h3><label class="label label-primary">Users</label></h3>
 </p>
-<table border="1" style="border-collapse: collapse">
+<table class="table table-bordered">
     <tr><th>User name</th></tr>
     @foreach (var user in Model.Users)
     {
