--- a/Balance/Balance/Views/Home/AddUserToGroup.cshtml
+++ b/Balance/Balance/Views/Home/AddUserToGroup.cshtml
@@ -7,6 +7,7 @@
         <div class="form-group">
             <h3><label class="label label-default">Email: </label></h3>
             <input type="text" class="form-control" name="email" placeholder="Enter email of user you want to add">
+            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
         </div>
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
