--- a/Balance/Balance/Views/Home/Index.cshtml
+++ b/Balance/Balance/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
 }
 <p>
     <h2><label class="label label-info">@Html.ActionLink("Add Group", "AddGroup")</label></h2>
+    <h2><label class="label label-info">@Html.ActionLink("Invitations", "Invitations")</label></h2>
 </p>
 <br />
 @foreach (var group in Model.Groups)
