--- a/Balance/Balance/Views/Home/Count.cshtml
+++ b/Balance/Balance/Views/Home/Count.cshtml
@@ -6,13 +6,26 @@
 <p>
     <h3><label class="label label-default">@Model.Type</label></h3>
 </p>
+<p>
+    <label>Type</label>
+</p>
+<form action="" method="post">
+    <select name="type">
+        @foreach (var type in Model.Types)
+        {
+            <option value=@type>@type</option>
+        }
+    </select>
+    <p>
+        <input type="submit" class="btn btn-success" value="OK" />
+    </p>
+</form>
 
 <table class="table table-bordered">
     <tr><th>Name</th><th>Credit</th></tr>
     @foreach (var credit in Model.Credits)
     {
         <tr><td>@credit.Name</td><td>@credit.Credit</td></tr>
-
     }
 </table>
 <p>
