--- a/Balance/Balance/Views/Home/Payment.cshtml
+++ b/Balance/Balance/Views/Home/Payment.cshtml
@@ -4,10 +4,19 @@
 }
 <form action="" method="post">
     <p>
-        <h3><label class="label label-default">Value: </label></h3>
-        <input type="number" name="value" class="form-control" placeholder="Enter value">
-        @Html.ValidationMessageFor(m => m.Value, "", new { @class = "text-danger" })
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <h3>
+            <label class="label label-default">Value: </label>
+        </h3>
+        <input type="number" name="value" class="form-control" placeholder="Enter value">  &nbsp
+        <select name="type">
+            @foreach (var type in Model.Types)
+            {
+                <option value=@type>@type</option>
+            }
+        </select>
+    </p>
+        @Html.ValidationMessageFor(m => m.Value, "", new {@class = "text-danger"})
+        @Html.ValidationSummary(true, "", new {@class = "text-danger"})
     </p>
     <p>
            <input type="submit" class="btn btn-success" value="Add"/>
