--- a/Balance/Balance/Views/Home/Invitations.cshtml
+++ b/Balance/Balance/Views/Home/Invitations.cshtml
@@ -16,5 +16,5 @@
         }
             
     </table>
-    <input type="submit" name="add" value="Execute"/>
+    <input type="submit" name="add" class="btn btn-success" value="Accept"/>
 </form>
