--- a/Balance/Balance/Views/Home/Payment.cshtml
+++ b/Balance/Balance/Views/Home/Payment.cshtml
@@ -7,7 +7,7 @@
         <h3>
             <label class="label label-default">Value: </label>
         </h3>
-        <input type="number" name="value" class="form-control" placeholder="Enter value">
+        <input type="number" name="value" class="form-control" placeholder="Enter value" step="any">
         <h5><select name="type" class="btn btn-xs">
             @foreach (var type in Model.Types)
             {
@@ -17,7 +17,6 @@
     </p>
         @Html.ValidationMessageFor(m => m.Value, "", new {@class = "text-danger"})
         @Html.ValidationSummary(true, "", new {@class = "text-danger"})
-    </p>
     <p>
            <input type="submit" class="btn btn-success" value="Add"/>
     </p>
