--- a/Balance/Balance/Views/Home/Payment.cshtml
+++ b/Balance/Balance/Views/Home/Payment.cshtml
@@ -7,7 +7,7 @@
         <h3>
             <label class="label label-default">Value: </label>
         </h3>
-        <input type="number" name="value" class="form-control" placeholder="Enter value" step="any">
+        <input type="number" name="value" class="form-control" placeholder="Enter value" step="0.01">
         <h5><select name="type" class="btn btn-xs">
             @foreach (var type in Model.Types)
             {
